--- a/dersaktif1.html
+++ b/dersaktif1.html
@@ -987,8 +987,11 @@
     var uzunluk=soru5.length
     console.log(uzunluk)
     var soru6=products.sort((a,b)=>a.unitPrice - b.unitPrice)
-    console.log(soru6)
-    
+    var uzunluk_soru6=soru6.length
+    var enkucukeleman=soru6[0]   
+    var enbuyukeleman=soru6[uzunluk_soru6-1] 
+    console.log(enkucukeleman);
+    console.log((enbuyukeleman));
 
 
 
